--- a/pizzamama/main/static/main/style.css
+++ b/pizzamama/main/static/main/style.css
@@ -1,7 +1,6 @@
 
-
 body{
-    background: url("images/main_background.jpg") no-repeat center center fixed;
+    background: linear-gradient(-30deg, rgba(0, 0.2, 0.1, 0.2), rgba(0, 0, 0, 0.2)), url("images/main_background.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -22,5 +21,4 @@ body{
     text-align:center;
     font-size:1.5rem;
     color:orange;
-    text-decoration: ;
 }
